--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body, html{
 	<img style="width:100px;margin:10px;border-radius:20px;;margin-top:40px;" src="https://repo.packix.com/api/Packages/5cb260ffe9f736001960757f/icon/download?size=medium">
 	<h1 style="margin:0px;font-size:25px;color:#fff;">Viola</h1>
 	<p style="margin:10px;font-size:15px;color:#fff;">Viola Themen</p>
-	<a class="button" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://celbreak.github.io/repo">Add Repo</a>
+	<a class="button" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://pepememo19.github.io/CelBreak_Page/">Add Repo</a>
 </center>
 
 
